# Thender-Backend

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/core/: chat_manager.py  security.py
app/crud/: auth.py  thend.py  user.py
app/models/: chat.py  comment.py  thend.py  user.py
app/routes/: auth_route.py  chats_route.py  thends_route.py  users_route.py
app/schemas/: auth_schema.py  chat_schema.py  comment_schema.py  support_scheme.py  thend_schema.py  user_schema.py
app/schemes/: user_scheme.py
app/telegram_bot/: support.py
