[project]
name = "myfastapi-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.0",
    "websockets>=16.0",
    "cloudinary>=1.39.0",
    "google-auth>=2.55.2",
    "requests>=2.34.2",
]
